2020-06-20  Bruno Haible  <bruno@clisp.org>

	Put client socket into blocking mode always.
	* socket.d (connect_via_ip): When a timeout was specified and connect()
	succeeded, put the file descriptor back into blocking mode.

2020-06-12  Bruno Haible  <bruno@clisp.org>

	Use realpath from libc when possible.
	This fixes a mistake from 2017-10-24.
	* pathname.d (realpath, realpath_is_my_realpath): Fix condition.

2020-06-12  Bruno Haible  <bruno@clisp.org>

	Fix (sys::program-name) result on Cygwin.
	* pathname.d (my_realpath) [UNIX_CYGWIN]: Don't return NULL in most
	cases.

2019-11-03  Bruno Haible  <bruno@clisp.org>

	Avoid 'makemake' error on macOS.
	Reported by Roland Illig <roland.illig@gmx.de>
	in <https://sourceforge.net/p/clisp/bugs/740/>.
	* makemake.in: Add spaces to avoid misinterpretation of ((arch...
	commands.

2019-06-29  Bruno Haible  <bruno@clisp.org>

	Make it possible to use DEFSETF expanders with computed keywords.
	Reported by Kaz Kylheku <kaz@kylheku.com>
	in <https://sourceforge.net/p/clisp/mailman/message/36601264/>.
	* functions.lisp (function-info): New function, extracted from
	function-signature.
	* compiler.lisp (function-signature): Invoke function-info.
	* places.lisp (define-setf-expander): Store on the property list also a
	function that returns the keyword initforms.
	(get-setf-expansion): Handle the case of a DEFSETF long form with
	keyword arguments, including the case when the keywords are not known at
	macroexpansion time.

2019-06-28  Bruno Haible  <bruno@clisp.org>

	Fix typos in message strings.
	* spvw_language.d: Fix typo in message.
	* control.d: Likewise.
	* hashtabl.d: Likewise.

2019-06-28  Bruno Haible  <bruno@clisp.org>

	INSTALL.windows: Modernize URLs.
	* INSTALL.windows: Prefer https over http URLs.

2018-11-11  Bruno Haible  <bruno@clisp.org>

	Add comments.
	* macros2.lisp (WITH-OPEN-FILE, WITH-OPEN-STREAM): Add comments.

2018-11-11  Bruno Haible  <bruno@clisp.org>
