@@ -345,6 +345,8 @@
 <!ENTITY opt-on-error '<option><olink targetdoc="man" targetptr="opt-on-error">-on-error</olink></option>'>
 <!ENTITY opt-traditional '<option><olink targetdoc="man" targetptr="opt-traditional">-traditional</olink></option>'>
 <!ENTITY opt-norl '<option><olink targetdoc="man" targetptr="opt-norl">-disable-readline</olink></option>'>
+<!ENTITY os-type '<link linkend="os"><function>EXT:OPERATING-SYSTEM-TYPE</function></link>'>
+<!ENTITY os-version '<link linkend="os"><function>EXT:OPERATING-SYSTEM-VERSION</function></link>'>
 <!ENTITY script '<olink targetdoc="man" targetptr="opt-exec-file">script</olink>'>
 <!ENTITY without-dynmod '<option><olink targetdoc="impnotes" targetptr="mod-dynload">--without-dynamic-modules</olink></option>'>
 <!ENTITY pack-inverted '<link linkend="pack-inverted"><function>EXT:PACKAGE-CASE-INVERTED-P</function></link>'>
