@@ -1,3 +1,12 @@
+2020-06-21  Bruno Haible  <bruno@clisp.org>
+
+	New functions EXT:OPERATING-SYSTEM-TYPE, EXT:OPERATING-SYSTEM-VERSION.
+	* constobj.d (O(operating_system_type_string),
+	O(operating_system_version_string)): New.
+	* misc.d (EXT:OPERATING-SYSTEM-TYPE, EXT:OPERATING-SYSTEM-VERSION): New.
+	* init.lisp (operating-system-type, operating-system-version): Export
+	from package EXT.
+
 2020-06-20  Bruno Haible  <bruno@clisp.org>
 
 	Put client socket into blocking mode always.
